[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentshield"
version = "0.1.0"
description = "Python SDK for the AgentShield URL security scanning API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["security", "url-scanner", "malware-detection", "api-client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "responses>=0.23",   # mock HTTP for tests
]

[project.urls]
Homepage = "https://github.com/your-org/agentshield"
Issues   = "https://github.com/your-org/agentshield/issues"

[tool.hatch.build.targets.wheel]
packages = ["agentshield"]
