[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentshield"
version = "0.1.0"
description = "Python SDK for the AgentShield AI Agent Security Layer"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = [
    "ai-security",
    "agent-security",
    "prompt-injection",
    "api-security",
    "runtime-security",
    "response-inspection",
    "sdk",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "responses>=0.23",
]

[project.urls]
Homepage = "https://github.com/AgentShieldHQ/agentshield-sdk"
Issues = "https://github.com/AgentShieldHQ/agentshield-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["agentshield"]
